# stm32f3discovery

./: 404.html  Cargo.toml  README.md  chapter_1.html  index.html  print.html  searchindex.js  toc.html  toc.js
bsp/: Cargo.toml  Embed.toml  build.rs
bsp/src/: bsp.rs  lib.rs  main.rs
hal/: Cargo.toml  Embed.toml  build.rs  link.x  openocd.gdb
hal/.cargo/: config.toml
hal/src/: interrupts.rs  main.rs
pac/: Cargo.toml  Embed.toml  link.x
pac/.cargo/: config.toml
pac/src/: main.rs
pac/stm32f303pac/: Cargo.toml  device.x
pac/stm32f303pac/src/: adc1.rs  adc1_2.rs  can.rs  crc.rs  dac.rs  dbgmcu.rs  dma1.rs  exti.rs  flash.rs  fmc.rs  gpioa.rs  i2c1.rs  iwdg.rs  lib.rs  pwr.rs  rcc.rs  rtc.rs  spi1.rs  syscfg_comp_opamp.rs  tim15.rs  tim16.rs  tim17.rs  tim2.rs  tim6.rs  tim8.rs  tsc.rs  usart1.rs  usb_fs.rs  wwdg.rs
pac/stm32f303pac/src/adc1/: awd2cr.rs  awd3cr.rs  calfact.rs  cfgr.rs  cr.rs  difsel.rs  dr.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs  tr1.rs  tr2.rs  tr3.rs
pac/stm32f303pac/src/adc1_2/: ccr.rs  cdr.rs  csr.rs
pac/stm32f303pac/src/can/: btr.rs  esr.rs  f0r1.rs  f0r2.rs  f10r1.rs  f10r2.rs  f11r1.rs  f11r2.rs  f12r1.rs  f12r2.rs  f13r1.rs  f13r2.rs  f14r1.rs  f14r2.rs  f15r1.rs  f15r2.rs  f16r1.rs  f16r2.rs  f17r1.rs  f17r2.rs  f18r1.rs  f18r2.rs  f19r1.rs  f19r2.rs  f1r1.rs  f1r2.rs  f20r1.rs  f20r2.rs  f21r1.rs  f21r2.rs  f22r1.rs  f22r2.rs  f23r1.rs  f23r2.rs  f24r1.rs  f24r2.rs  f25r1.rs  f25r2.rs  f26r1.rs  f26r2.rs  (+49 more)
pac/stm32f303pac/src/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
pac/stm32f303pac/src/dac/: cr.rs  dhr12l1.rs  dhr12l2.rs  dhr12ld.rs  dhr12r1.rs  dhr12r2.rs  dhr12rd.rs  dhr8r1.rs  dhr8r2.rs  dhr8rd.rs  dor1.rs  dor2.rs  sr.rs  swtrigr.rs
pac/stm32f303pac/src/dbgmcu/: apb1fz.rs  apb2fz.rs  cr.rs  idcode.rs
pac/stm32f303pac/src/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  ccr7.rs  cmar1.rs  cmar2.rs  cmar3.rs  cmar4.rs  cmar5.rs  cmar6.rs  cmar7.rs  cndtr1.rs  cndtr2.rs  cndtr3.rs  cndtr4.rs  cndtr5.rs  cndtr6.rs  cndtr7.rs  cpar1.rs  cpar2.rs  cpar3.rs  cpar4.rs  cpar5.rs  cpar6.rs  cpar7.rs  ifcr.rs  isr.rs
pac/stm32f303pac/src/exti/: emr1.rs  emr2.rs  ftsr1.rs  ftsr2.rs  imr1.rs  imr2.rs  pr1.rs  pr2.rs  rtsr1.rs  rtsr2.rs  swier1.rs  swier2.rs
pac/stm32f303pac/src/flash/: acr.rs  ar.rs  cr.rs  keyr.rs  obr.rs  optkeyr.rs  sr.rs  wrpr.rs
pac/stm32f303pac/src/fmc/: bcr1.rs  bcr2.rs  bcr3.rs  bcr4.rs  btr1.rs  btr2.rs  btr3.rs  btr4.rs  bwtr1.rs  bwtr2.rs  bwtr3.rs  bwtr4.rs  eccr2.rs  eccr3.rs  patt2.rs  patt3.rs  patt4.rs  pcr2.rs  pcr3.rs  pcr4.rs  pio4.rs  pmem2.rs  pmem3.rs  pmem4.rs  sr2.rs  sr3.rs  sr4.rs
pac/stm32f303pac/src/gpioa/: afrh.rs  afrl.rs  brr.rs  bsrr.rs  (+5 more)
(+303 files in other folders)
