[package]
authors = ["anlang <2682525840@qq.com>"]
edition = "2024"
readme = "README.md"
name = "stm32f303"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.5"
stm32f3-discovery = "0.7.2"
rtt-target = "0.6.1"
panic-rtt-target = "0.1.3"


[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
