[package]
name = "hal"
version = "0.1.0"
edition = "2021"

[dependencies]
# panic-semihosting = "0.6.0"  # 已替换为 panic-rtt-target
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
critical-section = "1.2.0"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc","ld", "rt",] }

# RTT 依赖已启用，用于实时调试输出
