[package]
name = "pac"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
stm32f303pac = { path = "./stm32f303pac", features = ["critical-section"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
